# CBOSLib

./: CMakeLists.txt  CTSetGCOL.c  ClrTrans.c  ClrTrans.h  ComFType.c  CopyFType.c  CountFType.c  DecodeLExe.c  DragAnObj.c  DragAnObj.h  FSCanonic.c  FSCopy.c  FileCDir.c  FileError.c  FileRCat.c  FileSType.c  FileTypes.h  GBPBRCat.c  GMakefile  Hourglass.c  Hourglass.h  InFType.c  MTError.c  MTFile.c  MTLookup.c  MakeCommon  Makefile  MessTrans.h  OSDate.h  OSFSCntrl.h  OSFile.h  OSGBPB.h  OSPlot.c  OSReadTime.h  OSSpriteOp.h  OSVDU.h  OSWord.h  PalEntry.c  PalEntry.h  PickFType.c  (+31 more)
Internal/: CBOSMisc.h
